# thesis

./: CMakeLists.txt  async-test.cpp  audio.cpp  comprun.sh  cv-helpers.cpp  ncurses-test.cpp  picomprun.sh  readme.md  sampling.cpp  soundtest.m  testint.c  thesis - prepi.cpp  thesis-output  thesis.cpp  visualisation.cpp
Python testing/: Untitled.ipynb  test.ipynb  test.py
Python testing/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  test-checkpoint.ipynb
RealsenseConverter/: Program.cs  RealsenseConverter.sln
r-tests/: hallway1_Depth.raw  hallway1_Depth_metadata.csv  r-tests.R
